@@ -1,0 +1,3 @@
+source="bootsplash-3.1.4-2.6.11.diff"
+source_url=http://www.bootsplash.de/files/$source
+appliedkernels="2.6.11"
