@@ -1,0 +1,3 @@
+appliedkernels="2.6.11"
+source="linux-${appliedkernels}-mppe-mppc-1.3.patch.gz"
+source_url="http://www.polbox.com/h/hs001/${source}"
