@@ -1,3 +1,8 @@
+2005-03-03 Eric Sandall <eric@sandall.us>
+	* info/patches/bootsplash_patches/bootsplash-3.1.4-2.6.11.diff: Added
+	* info/patches/mppe_mppc_patches/linux-2.6.11-mppe-mppc-1.3.patch: Added
+	* info/patches/mppe_mppc_patches/linux-2.4.29-mppe-mppc-1.3.patch: Added
+
 2005-03-02 David Brown <dmlb2000@excite.com>
 	* info/patches/reiser4_patches/reiser4-2.6.10-2 added
 
